Fix search button size on mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -51,3 +51,10 @@ input {
 .navigationButtons {
   display: flex;
 }
+
+@media (max-width: 1100px) {
+  .searchButton {
+    height: 100%;
+    width: 100%;
+  }
+}
